Contrast fix

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -79,7 +79,7 @@ form {
     padding: 1rem;
     border: 1px solid rgba(0,0,0,0.1);
     border-radius: 0.5rem;
-    background-color: #7c808a;
+    background-color: #1E2628;
     display: grid;
 }
 
